<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context=".ScoreInfo">

    <LinearLayout style="@style/MainLayout">

        <ImageView
            style="@style/Image"
            android:src="@drawable/world" />

        <android.support.v7.widget.CardView
            style="@style/TitleCard"
            card_view:cardCornerRadius="@dimen/cardRadius">

            <LinearLayout style="@style/CardLayout">

                <TextView
                    style="@style/QuestionTitle"
                    android:text="@string/scoreTitle" />

                <TextView
                    style="@style/Question"
                    android:text="@string/scorePointAmount" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/nextButtonMargin"
                    android:background="@drawable/buttonshape"
                    android:text="@string/nextButton"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="@dimen/questionText" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>