<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context=".Welcome">

    <LinearLayout style="@style/MainLayout">

        <ImageView
            style="@style/Image"
            android:src="@drawable/world" />

        <android.support.v7.widget.CardView
            style="@style/TitleCard"
            card_view:cardCornerRadius="@dimen/cardRadius">

            <LinearLayout style="@style/CardLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/titleBottom"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/questionNumColor"
                    android:textSize="@dimen/titleText" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="@dimen/nameWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/nameHint"
                    android:inputType="textPersonName|textCapWords"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/beginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/beginButtonMargin"
                    android:background="@drawable/buttonshape"
                    android:text="@string/beginButton"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="@dimen/questionText" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>